# imissmono

./: .gitignore  Cargo.toml  Dockerfile
config/: art.toml  default.toml  default.yml  local.toml
data/: db.sqlite
migrations/: 20241014101230_initial.sql
src/: art.rs  config.rs  db.rs  lib.rs  main.rs
static/: script.js  style.css
