[package]
name = "imissmono"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
config = "0.15"
maud = {version = "0.26", features = ["axum"] }
serde = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "compression-gzip", "compression-br", "compression-deflate", "compression-zstd"] }
holodex = "0.3.3"
chrono = "0.4.39"
rand = "0.8.5"
